# SAMOS_NEWGUI

./: .gitignore  LICENSE  MANIFEST.in  Parameters.txt  README.md  README.rst  SAMOS_New_SHIPPED.py  SAMOS_New_V0.py  SAMOS_New_V1.1.py  SAMOS_New_V1.11.py  SAMOS_New_V1.py  SAMOS_New_V2.0.py  SAMOS_New_V3.0.py  SAMOS_New_V3.0copy.py  SAMOS_New_V3p1.py  SAMOS_New_V3p2.py  SAMOS_New_V3p3.py  SAMOS_New_V3p4.py  SAMOS_New_V3p5.py  SAMOS_New_V3p6.py  SAMOS_New_V3p65_winok.py  SAMOS_New_V3p66_winok.py  SAMOS_New_V3p67_winok.py  SAMOS_New_V3p68_winok.py  SAMOS_New_V3p6_winok.py  SAMOS_New_V3p719_winok.py  SAMOS_New_V3p71_winok.py  SAMOS_New_V3p72_winok.py  SAMOS_New_V3p74_GuideStar.py  SAMOS_New_V3p75_GuideStar.py  SAMOS_New_V3p7_winok.py  SAMOS_New_V3p8.py  SAMOS_QL_imagesbias_SLOAN-i_0.fits  SAMOS_QL_imagesbias_SLOAN-i_1.fits  SAMOS_QL_imagesbias_SLOAN-i_2.fits  SAMOS_QL_imagesbuff_SLOAN-i_0.fits  SAMOS_QL_imagesbuff_SLOAN-i_1.fits  SAMOS_QL_imagesbuff_SLOAN-i_2.fits  SAMOS_QL_imagesdark_SLOAN-i_0.fits  SAMOS_QL_imagesdark_SLOAN-i_1.fits  (+32 more)
Hadamard/: Hadamard_go.py  Hadamard_header.py  generate_DMD_patterns_samos.py  generate_DMD_patterns_samos_tester.py
SAMOS_20230324/: SAMOS_image_102927.fits  SAMOS_image_104107.fits  SAMOS_image_104141.fits  SAMOS_image_152001.fits  SAMOS_image_180219.fits
SAMOS_20230329/: SAMOS_image_130441.fits  SAMOS_image_130529.fits  SAMOS_image_130706.fits  SAMOS_image_130741.fits  SAMOS_image_130815.fits  SAMOS_image_131324.fits  SAMOS_image_131436.fits  SAMOS_image_131445.fits  SAMOS_image_131529.fits  SAMOS_image_134525.fits  SAMOS_image_134726.fits  SAMOS_image_135705.fits  SAMOS_image_141722.fits  SAMOS_image_142725.fits  SAMOS_image_142741.fits  SAMOS_image_142748.fits  SAMOS_image_143321.fits  SAMOS_image_161910.fits  SAMOS_image_162121.fits
SAMOS_20230330/: SAMOS_image_112930.fits  SAMOS_image_135034.fits  SAMOS_image_140606.fits  SAMOS_image_154006.fits  SAMOS_image_161904.fits  SAMOS_image_161933.fits  SAMOS_image_162153.fits  SAMOS_image_162907.fits  SAMOS_image_175834.fits  SAMOS_image_175905.fits  SAMOS_image_180042.fits  SAMOS_image_180147.fits
SAMOS_20230331/: SAMOS_image_102636.fits  SAMOS_image_104757.fits  SAMOS_image_104845.fits  SAMOS_image_110348.fits  SAMOS_image_110814.fits  SAMOS_image_111803.fits  SAMOS_image_112302.fits  SAMOS_image_112545.fits  SAMOS_image_113447.fits  SAMOS_image_113653.fits  SAMOS_image_115439.fits  SAMOS_image_115933.fits  SAMOS_image_134909.fits
SAMOS_20230530/: SAMOS_image_100823.fits  SAMOS_image_150220.fits  SAMOS_image_152506.fits  SAMOS_image_153209.fits  SAMOS_image_155113.fits  SAMOS_image_155433.fits  SAMOS_image_155513.fits  SAMOS_image_155807.fits  SAMOS_image_160247.fits  SAMOS_image_170851.fits  SAMOS_image_170943.fits
SAMOS_Astrometry_dev/: SDSS_try.py  WCS_150.1674444_-54.788541.fits  WCS_150.1679077_-54.7886346.fits  WCS_150.17110_-54.79004.fits  WCS_150.17112438676628_44.79007459195799.fits  WCS_150.1717163769713_-4.789415028479849.fits  newtable.fits  skymapper_interrogate.py  testTwirlFix.py  tk_class_astrometry.py  tk_class_astrometry_V4.py  tk_class_astrometry_V5.py  untitled2.py
SAMOS_BATCHMODE/: header.py  test_BATCHMODE.py  test_go.py
SAMOS_CCD_dev/: Class_CCD.py  Class_CCD_dev.py  Class_CCD_dev_scrap.py  convertSIllypy  filename_1000.fit  test_class_CCD.py
SAMOS_CONFIG_dev/: CONFIG_GUI.py  test_CONFIG_GUI.py
SAMOS_DMD_dev/: Class_DMD_dev.py  SAMOS_DMD_GUI_dev.py  test_class_DMD_module.py
SAMOS_ETC/: SAMOS_SPECTRAL_ETC.py  SAMOS_beta_2.py  SAMOS_beta_3.py
SAMOS_MOTORS_dev/: Class_PCM.py  IDG_Filter_positions.txt  PCM_module_GUI.py  SAMOS_MOTORS_GUI_dev.py.sav  SAMOS_MOTORS_GUI_dev.py.sav2  test_class_PCM.py
SAMOS_QL_images/: Field_GuideStarnew.fits  SkyMapperProduced.fits  dark_1.fits  flat_1.fits  new_QLimage.fit  newimage.fit  newimage.fits  newimage_ff.fits  newimage_ql.fits  setimage_0.fit  setimage_1.fit  setimage_2.fit  setimage_4.fit  setimage_5.fit  setimage_7.fit  setimage_9.fit  superbias.fits  superbuffer.fits
SAMOS_SOAR_TCS/: Class_SOAR_TCS.py  Class_SOAR_TCS_dev.py  GUI_SOAR_dev.py
SAMOS_SOAR_dev/: Class_SOAR.py
SAMOS_system_dev/: IP_addresses_user.csv  IP_status_dict.csv  Parameters.txt  Parameters_README.py  Parameters_of_the_night.txt  SAMOS_Filter_positions.txt  SAMOS_Functions.py  (+8 more)
(+807 files in other folders)
